--- a/README.rdoc
+++ b/README.rdoc
@@ -1,29 +1,3 @@
-/*
-    This lists the bugs, states additional features that should be added to the
-    project, etc. 
-    
-    MAINMENU ??? 
-    
-    Class definitions before function definitions
-    Add structs. 
-    Threads. 
-    MainEventHandler, not mainEventHandler. Remove messageclasses.h? 
-    
-    BYTE ???
-    vector.size()? 
-    
-    Inverted colorings
-    Optimizations
-    ExitThread? 
-    
-    Reset Magnification
-    
-    Change vector to linked list
-    Compatible DC to draw to-->Window clipping? 
-    Prevent window resizing. 
-    
-    Syntax of: 
-    thread_info1 ThreadInfo = *((thread_info1*)param); 
-    
-    Change RunningThread's name. 
-*/
+This is an application I wrote to draw the Mandelbrot set in 2007. A later version supported zoom functionality, though it was lost. 
+
+This code does not currently compile on my laptop, most likely because the code is 32-bit. 
