--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 This is an application I wrote to draw the Mandelbrot set in 2007. A later version supported zoom functionality, though it was lost. 
 
-This code does not currently compile on my laptop, most likely because the code is 32-bit. 
+This code does not currently compile on my laptop, most likely because it is 32-bit. 
